crates/core-executor/src/tests/sql/ddl/snapshots/snowflake_error/query_alter_table_if_exists_missing_schema.snap
---
source: crates/core-executor/src/tests/sql/ddl/table.rs
description: "\"ALTER TABLE IF EXISTS embucket.missing.table ADD COLUMN new_col INT\""
---
Err(
    "Snowflake Error: SQL compilation error: Schema 'embucket.missing' does not exist or not authorized",
)
