crates/core-executor/src/tests/sql/ddl/snapshots/snowflake_error/query_alter_table_if_exists_missing_schema_snowflake_error.snap
---
source: crates/core-executor/src/tests/sql/ddl/table.rs
description: "\"ALTER TABLE IF EXISTS embucket.missing_schema.some_table add column c5 VARCHAR\""
---
Err(
    "Snowflake Error: SQL compilation error: Schema 'embucket.missing_schema' does not exist or not authorized",
)
