crates/core-executor/src/tests/sql/ddl/snapshots/snowflake_error/query_alter_table_missing_catalog_snowflake_error.snap
---
source: crates/core-executor/src/tests/sql/ddl/table.rs
description: "\"ALTER TABLE missing_catalog.public.hello add column c5 VARCHAR\""
---
Err(
    "Snowflake Error: SQL compilation error: Database 'missing_catalog' does not exist or not authorized",
)
