crates/core-executor/src/tests/sql/ddl/snapshots/snowflake_error/query_create_table_parse_error_snowflake_error.snap
---
source: crates/core-executor/src/tests/sql/ddl/table.rs
description: "\"CREATE TABLE foo\""
info: Tests Snowflake Error
---
Err(
    "Snowflake Error: SQL compilation error: syntax error unexpected end of input",
)
